--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,7 @@ wp-content/themes/twenty*/
 
 # ignore node dependency directories
 node_modules/
-/wp-content/themes/flynt-master/assets/
+#/wp-content/themes/flynt-master/assets/
 
 # ignore log files and databases
 *.log
