composer and debug true

--- a/wp-content/themes/flynt-master/composer.json
+++ b/wp-content/themes/flynt-master/composer.json
@@ -5,17 +5,14 @@
   "license": "MIT",
   "minimum-stability": "dev",
   "prefer-stable": true,
-  "authors": [
-    {
-      "name": "bleech",
-      "email": "flynt@bleech.de"
-    }
-  ],
+  "authors": [{
+    "name": "bleech",
+    "email": "flynt@bleech.de"
+  }],
   "require": {
-    "php": ">=7.0.0",
-    "timber/timber": "^1.8",
+    "timber/timber": "1.11.0",
     "flyntwp/acf-field-group-composer": "^1.0.1",
-    "erusev/parsedown": "^1.7"
+    "dflydev/dot-access-data": "^2.0"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^3.4"
